fix: center text on small cards

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -128,11 +128,11 @@ footer {
 
   .deckTitle {
     text-align: center;
-    top: 50%;
+    top: 30%;
     left: 0px;
     position: absolute;
     font-size: 14px;
-    width: 98%;
+    width: 85%;
   }
 }
 
