--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -235,11 +235,11 @@
 
   .deckTitle {
     text-align: center;
-    top: 50%;
+    top: 30%;
     left: 0px;
     padding: 5px;
     position: absolute;
     font-size: 14px;
-    width: 89%;
+    width: 85%;
   }
 }
